syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ExtraLineupType.proto";

message ExtraLineupDestroyNotify {
	ExtraLineupType extra_lineup_type = 5;
}

