syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message RotaterData {
	uint32 GLHAGJGAEHE = 11;
	float LKEFOLCGFGD = 8;
	uint32 group_id = 2;
}

