syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ItemList.proto";

message TakenChallengeRewardInfo {
	ItemList reward = 11;
	uint32 star_count = 1;
}

